--- a/localisation/english/MD_focus_DEN_l_english.yml
+++ b/localisation/english/MD_focus_DEN_l_english.yml
@@ -404,7 +404,7 @@ DEN_found_Visitdenmark_desc: "The establishment of VisitDenmark represents a con
  DEN_Student_and_holiday_working_visa: "Student & Holiday Visa"
  DEN_Student_and_holiday_working_visa_desc: "By facilitating temporary stays for students, interns, and holidaymakers, the government aims to promote cross-cultural understanding, foster international cooperation, and showcase Denmark as a destination of choice for education and leisure."
  DEN_found_Nye_Borgerlige: "Found Nye Borgerlige"
- DEN_found_Nye_Borgerlige_desc: "Denmark fosters the integration of newcomers into the political landscape with Nye Borgerlige , encouraging the formation of new political parties representing immigrant communities and diverse perspectives."
+ DEN_found_Nye_Borgerlige_desc: "Denmark fosters the integration of newcomers into the political landscape with Nye Borgerlige, encouraging the formation of new political parties representing immigrant communities and diverse perspectives."
  DEN_strengthen_Danish_community_of_value: "Strengthen Danish Community Of Value"
  DEN_strengthen_Danish_community_of_value_desc: "By promoting civic participation, social integration, and mutual respect, the government aims to nurture a sense of belonging and solidarity among all members of Danish society, regardless of nationality or background."
  DEN_new_foreign_policy: "New Foreign Policy"
@@ -1047,6 +1047,36 @@ DEN_Reform_Fuhrungsstaab_der_Luftwaffe_desc: "In tandem with Flyvevåbnet's tran
  denmark.4003.d1: "[USA.GetLeader] has refused to sign off on providing some shiny new fighters for our brave airforce! [DEN.GetLeader] is said to be furious with the showing from the [USA.GetAdjective] government and has been attempting to get a response from Washington to no avail."
  denmark.4003.d2: "[SOV.GetLeader] has refused to sign off on providing some shiny new fighters for our brave airforce! [DEN.GetLeader] is said to be furious with the showing from the [SOV.GetAdjective] government and has been attempting to get a response from Moscow to no avail."
  denmark.4003.o1: "Those Bastards!"
+ denmark_agrar_event.10.t: "Environmental activist protests"
+ denmark_agrar_event.10.d: "Environmental activist protests are organice demonstrations to aim raising awareness and prompting action on various environmental issues."
+ denmark_agrar_event.10.a: "they complain as alsways"
+ denmark_agrar_event.11.t: "Environmental activist protests"
+ denmark_agrar_event.11.d: "Join us for the Green Earth Rally, a peaceful and impactful protest to raise awareness about the urgent need for climate action. This family-friendly event invites individuals of all ages and backgrounds to come together and advocate for a sustainable future."
+ denmark_agrar_event.11.a: "Spasser?"
+ denmark_agrar_event.12.t: "Environmental activist protests"
+ denmark_agrar_event.12.d: "Join us for the Climate Justice March, a dynamic and impactful protest aimed at demanding urgent action for climate justice. This event is designed to make a strong statement while remaining respectful and non-violent, providing a platform for passionate individuals to voice their concerns and push for meaningful change."
+ denmark_agrar_event.12.a: "this could lead to problems"
+ denmark_agrar_event.13.t: "Environmental activist protests"
+ denmark_agrar_event.13.d: "Join us for Eco Uprising, a high-intensity protest designed to confront those responsible for environmental destruction and demand immediate, radical change. This event is not for the faint-hearted; it is a bold call to action for those ready to take a stand against the corporations and policies endangering our planet."
+ denmark_agrar_event.13.a: "Maybe we should listen to them"
+ denmark_agrar_event.14.t: "Environmental activist protests"
+ denmark_agrar_event.14.d: "Join us for Eco Uprising, an intense and urgent protest designed to confront those responsible for environmental destruction and demand immediate, radical action. This event is for dedicated activists ready to take bold steps in the fight against climate change and environmental degradation."
+ denmark_agrar_event.14.a: "F*ck you Greta"
+ denmark_agrar_event.15.t: "Farmer protests"
+ denmark_agrar_event.15.d: "Join us for Farmers' Voices, a peaceful and powerful protest organized by small farmers to advocate for sustainable agriculture and fair farming practices. This protest aims to highlight the challenges faced by small-scale farmers and demand support from policymakers and the community."
+ denmark_agrar_event.15.a: "this is nothing to worry about"
+ denmark_agrar_event.16.t: "Farmer protests"
+ denmark_agrar_event.16.d: "Join us for the Farmers' Rights Rally, a peaceful and determined protest organized by small and medium-sized farmers to advocate for fair policies, sustainable agriculture, and economic support. This event aims to draw attention to the pressing issues farmers face and to push for meaningful reforms that support the agricultural community."
+ denmark_agrar_event.16.a: "Maybe we should think about our politics"
+ denmark_agrar_event.17.t: "Farmer protests"
+ denmark_agrar_event.17.d: "Join us for the Farmers' Revolt, an intense and confrontational protest organized by farmers who are fed up with unfair policies, unsustainable practices, and lack of support from the government. This protest aims to forcefully highlight the urgent needs of the farming community and demand immediate action from policymakers."
+ denmark_agrar_event.17.a: "This could lead to serious Problems"
+ denmark_agrar_event.18.t: "Farmer protests"
+ denmark_agrar_event.18.d: "Farmers will march through the streets, using tractors and other farm equipment to block major roads and intersections, disrupting traffic to draw attention to their plight. This demonstration of solidarity and frustration aims to show the critical state of the farming industry."
+ denmark_agrar_event.18.a: "Lortesæks"
+ denmark_agrar_event.19.t: "Farmer protests"
+ denmark_agrar_event.19.d: "Join us for the Farmers' Revolt, a highly charged and confrontational protest organized by farmers who are outraged by unfair policies, unsustainable practices, and lack of support from the government. This protest is a last stand, aimed at forcefully demanding immediate, significant action to address the critical issues facing the farming community."
+ denmark_agrar_event.19.a: "sådanne røvhuller"
 
  #News
  denmark.22.t: "Øresunds Broen"
@@ -1086,7 +1116,7 @@ DEN_Reform_Fuhrungsstaab_der_Luftwaffe_desc: "In tandem with Flyvevåbnet's tran
  denmark.33.d: "In June 2012 Denmark decided to legalize same-sex marriage, which was met with major support from the population. However, a few conservative priests have spoken out against it, claiming it went against \"the fundamentals of the Church's values\""
  denmark.33.a: "Bros before...."
  denmark.34.t: "Teachers Union"
- denmark.34.d: "The Danish Teachers Union have decided to shut down schools, due to a dispute in how the school years were planned, as it had been earlier proven that the teachers only actually taught students for 40% of their work time, the rest were spent preparing" # I 
+ denmark.34.d: "The Danish Teachers Union have decided to shut down schools, due to a dispute in how the school years were planned, as it had been earlier proven that the teachers only actually taught students for 40% of their work time, the rest were spent preparing" # I
  denmark.34.a: "But I dont want my kids at home?"
  denmark.35.t: "Terror In Denmark"
  denmark.35.d: "In early February, 2015, three seperate shootings have occured in Copenhagen.\n\nThe first shooting occured at the Krudttønden Cafe, which was holding a free speech event at that time, which killed film director Finn Nørgaard.\n\nThe second shooting occured in the Great Synagogue, which killed volunteer guard Dan Uzan.\n\n The third shooting occured near an apartment building, in which Danish police identified the perpertrator and engaged in a shootout with him, killing him.\n\n The entire attack claimed the lives of 3 people and saw 5 officers injured. The perpertrator was Omar Abdel Hamid El-Hussein, a man of Palestinian descent, who's had trouble with the law his whole life and, allegedly, declared his allegiance to the extremist group ISIS before the attacks."
@@ -1511,7 +1541,7 @@ DEN_Freetown_Christiana_tt: "§HSjaelland§! Receives §H40 Productivity§! "
  DEN_bureaucracy_cost_multiplier_modifier_tt: "Modifies §YAdministration Cost§! for §HForsvaret§! by [?DEN_bureaucracy_cost_multiplier_modifier_change|-%] (Current: [?DEN_bureaucracy_cost_multiplier_modifier|Y%])"
  DEN_military_factories_productivity_tt: "Modifies §YMilitary Factories Productivity§! for §HForsvaret§! by [?DEN_military_factories_productivity_change|-%] (Current: [?DEN_military_factories_productivity|Y%])"
  DEN_dockyard_productivity_tt: "Modifies §YDockyard Productivity§! for §HForsvaret§! by [?DEN_dockyard_productivity_change|-%] (Current: [?DEN_dockyard_productivity|Y%])"
- DEN_monthly_population_tt: "Modifies §YMonthly Population§! for §HKingdom of Denmark§! by [?DEN_monthly_population_change|-%] (Current: [?DEN_monthly_population|Y%])"
+ DEN_monthly_population_tt: "Modifies §YMonthly Population§! for §HKingdom of Denmark§! by [?DEN_monthly_population_change|+%] (Current: [?DEN_monthly_population|Y%])"
  DEN_Culture_drift_defence_factor_tt: "Modifies §YCulture drift Defence§! for §HDanish Culture§! by [?DEN_Culture_drift_defence_factor_change|+%] (Current: [?DEN_Culture_drift_defence_factor|Y%])"
  DEN_Culture_conscription_factor_tt: "Modifies §YConscription§! for §HDanish Culture§! by [?DEN_Culture_conscription_factor_change|+%] (Current: [?DEN_Culture_conscription_factor|Y%])"
  DEN_Culture_stability_factor_tt: "Modifies §YStability§! for §HDanish Culture§! by [?DEN_Culture_stability_factor_change|+%] (Current: [?DEN_Culture_stability_factor|Y%])"
@@ -1704,3 +1734,41 @@ DEN_idea_Welfare_State1: "The Danish Minimalstate"
 DEN_idea_Welfare_State1_desc: "The danish model of a minimal state is unique, striving to reduce costs as much as possible while maintaining public support."
 DEN_idea_Welfare_State2: "The reformed Welfare State"
 DEN_idea_Welfare_State2_desc: "The Welfare State is a major part of the danish society, designed to keep the major part of our society in the middle class. However, reforms were necessary to ensure its continued effectiveness and sustainability."
+
+DEN_Agriculture_subvention_TT: "by support our Agriculture sector, we increase the stability and independence of our nation."
+DEN_agricultural_income: "Actuall income $[?agriculture_tax_gain|+3] from §YAgriculture§!"
+
+DEN_wine_grow_tt: "Viticulture in Denmark is a relatively recent phenomenon compared to more traditional wine-growing regions in Europe. Historically, Denmark's cool climate posed significant challenges to grape cultivation. However, with climate change, technological advancements, and the introduction of hardy grape varieties, Danish wine production has become increasingly viable and popular. So why shouldn´t we support this Project?"
+
+DEN_wine_grow_tt_II: "Agricultural subsidies are crucial tools for supporting farmers, stabilizing food supplies, and promoting sustainable practices. And maybe in the end we will get a small profit."
+
+DEN_decision_Agriculture: "Agriculture subsiidies"
+DEN_decision_Agriculture_desc: "Agricultural subsidies are financial aids provided by governments to support farmers and agribusinesses. These subsidies aim to stabilize food prices, ensure a steady food supply, promote agricultural productivity, and protect farmers' incomes.\n\n§YFarmer anger§!: [?ROOT.DEN_farmer_anger]%\n§YEnvirementalist anger§!: [?ROOT.DEN_environmentalist_anger]%"
+DEN_Subventions_for_Grain_decision: "Grain Subsidies"
+DEN_Subventions_for_Pigs_decision: "Livestock Subsidies"
+DEN_Subventions_for_Beef_decision: "Aquaculture Subsidies"
+DEN_Subventions_for_Fishing_decision: "Fisheries Subsidies"
+DEN_Request_Whine_grow_by_EU_decision: "Grow our own Wine"
+DEN_Subventions_modernization_decision: "Subsidies modernation efforts for more enviremental friendlly equipment"
+
+DEN_idea_Agriculture: "Modern Agriculture"
+DEN_idea_Agriculture_desc: "Modern agriculture is characterized by the integration of advanced technologies, sustainable practices, and innovative methods to increase productivity, efficiency, and environmental stewardship. This approach aims to meet the food demands of a growing global population while minimizing the ecological footprint."
+DEN_idea_Agriculture_II: "Agriculture subsiidies"
+DEN_idea_Agriculture_II_desc: "Agricultural subsidies are financial support mechanisms provided by governments to the agricultural sector to stabilize food prices, ensure a stable food supply, and support farmers' incomes. These subsidies can take various forms and serve multiple purposes, addressing both economic and social goals."
+DEN_wineland: "Wine from denmark"
+DEN_wineland_desc: "Danish wine production is a dynamic and growing industry, characterized by innovation and adaptation to changing climatic conditions. With a focus on quality and sustainability, Danish wines are carving out a niche in the global wine market."
+
+DEN_Agriculture: "Modern Agriculture"
+DEN_Agriculture_desc: "Modern agriculture is characterized by the integration of advanced technologies, sustainable practices, and innovative methods to increase productivity, efficiency, and environmental stewardship. This approach aims to meet the food demands of a growing global population while minimizing the ecological footprint."
+
+ DEN_modify_Farmer_anger_tt: "§YFarmer anger§! changes by [?modify_Farmer_anger|+0] (Current: [?DEN.DEN_farmer_anger|Y0])\n"
+ DEN_modify_Envirementalist_anger_tt: "§YEnvirementalist anger§! changes by [?modify_Envirementalist_anger|-0] (Current: [?DEN.DEN_environmentalist_anger|Y0])\n"
+ DEN_a_green_initiative: "Environmental substitution"
+ DEN_a_green_initiative_desc: "Environmental substitution is part of a broader strategy to achieve sustainability and mitigate environmental degradation. It requires innovation, awareness, and commitment from individuals, businesses, and governments to identify and adopt greener alternatives."
+
+ DEN_Envirement_subvention_TT: "Environmental substitution is part of a broader strategy to achieve sustainability and mitigate environmental degradation. It requires innovation, awareness, and commitment from individuals, businesses, and governments to identify and adopt greener alternatives."
+ DEN_Reforestation_decision: "Reforestation Subsidies"
+ DEN_wildlife_conservation_decision: "Wildlife conservation Subsidies"
+ DEN_water_conservation_decision: "Water conservation Subsidies"
+ DEN_marine_conservation_decision: "Marine conservation Subsidies"
+ DEN_Protest: "Protests of the People"
