--- a/localisation/english/unit_medals_l_english.yml
+++ b/localisation/english/unit_medals_l_english.yml
@@ -15,6 +15,11 @@
  GER_DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_2:0 "Generalmajor"
  GER_DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_3:0 "Generalleutnant"
  GER_DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_4:0 "General"
+ DEN_DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_0:0 "Oberst"
+ DEN_DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_1:0 "Brigadegeneral"
+ DEN_DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_2:0 "Generalmajor"
+ DEN_DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_3:0 "Generalløjtnant"
+ DEN_DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_4:0 "General"
  FRA_DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_0:0 "Colonel"
  FRA_DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_1:0 "Gen de Brigade"
  FRA_DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_2:0 "Gen de Division"
